--- a/FrmPrincipal.form
+++ b/FrmPrincipal.form
@@ -59,6 +59,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Exportar"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ExportarActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
